--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: 'Install Node'
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          
       - name: Install dependencies
         run: pnpm install
 
