--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -18,17 +18,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: 'Install Node'
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
+
     - name: 'Install Packages'
-      run: npm install
+      run: pnpm install
+
     - name: 'Run Vitest'
       run: npx vitest --coverage.enabled true
+
     - name: 'Report Coverage'
       if: always() 
       uses:  davelosert/vitest-coverage-report-action@v2
+      
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
