--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -17,23 +17,28 @@ jobs:
       pull-requests: write
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: 'Install Node'
+    - name: Install Node
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
+          
+    - name: Install pnpm
+      run: |
+        npm install -g pnpm
 
-    - name: 'Install Packages'
+    - name: Install Packages
       run: pnpm install
 
-    - name: 'Run Vitest'
+    - name: Run Vitest
       run: npx vitest --coverage.enabled true
 
-    - name: 'Report Coverage'
+    - name: Report Coverage
       if: always() 
       uses:  davelosert/vitest-coverage-report-action@v2
-      
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
