--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "react-router-dom": "^6.21.3",
     "vite-tsconfig-paths": "^4.2.2"
   },
+  "peerDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
