--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "ui"
   ],
   "scripts": {
-    "dev": "storybook dev -p 6006",
-    "build": "tsc && vite build",
+    "dev": "concurrently \"pnpm storybook\" \"pnpm build\"",
+    "build": "tsc && vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky install",
     "test": "vitest",
@@ -39,6 +40,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
