--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "@storybook/addon-themes": "^7.6.5",
     "@storybook/blocks": "7.6.5",
     "@storybook/builder-vite": "^7.6.5",
+    "@storybook/manager-api": "^7.6.10",
     "@storybook/react": "7.6.5",
     "@storybook/react-vite": "7.6.5",
     "@storybook/test": "7.6.5",
+    "@storybook/theming": "^7.6.10",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
