--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,9 +11,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
-      - run: npm ci
-      - run: npm test
+          node-version: '20.x'
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm
+
+      - name: Install Packages
+        run: pnpm install
+      - run: pnpm testOnce
 
   publish-gpr:
     needs: build
@@ -25,9 +30,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: '20.x'
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm
+      - name: Install Packages
+        run: pnpm install
+      - run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
