--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,34 +1,37 @@
-name: Node.js Package
+name: Release Package
 
 on:
   release:
     types: [created]
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
+      - name: Install Node
+        uses: actions/setup-node@v4
         with:
-          version: 8
-          run_install: false
+          node-version: '20.x'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@kyechan99'
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-          cache: pnpm
-          registry-url: https://registry.npmjs.org
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm
 
-      - name: Install dependencies
+      - name: Install Packages
         run: pnpm install
 
-      - name: Publish 🚀
-        shell: bash
-        run: pnpm publish packages/components --access public --no-git-checks
+      - run: pnpm buildOnce
+
+      - run: pnpm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
