--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "dev": "concurrently \"pnpm storybook\" \"pnpm build\"",
     "build": "tsc && vite build --watch",
+    "buildOnce": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "preview": "vite preview",
