--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -32,6 +32,6 @@ jobs:
 
       - run: pnpm buildOnce
 
-      - run: pnpm publish
+      - run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
