--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "bmates-ui",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "bmates-ui",
-  "author": {
-    "name": "kyechan99",
-    "email": "kyechan99@gmail.com"
-  },
+  "author": "kyechan99 <kyechan99@gmail.com>",
   "type": "module",
   "main": "dist/index.umd.cjs",
   "module": "dist/index.js",
@@ -18,6 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/Bandmators/bmates-ui.git"
   },
+  "homepage": "https://github.com/Bandmators/bmates-ui",
   "keywords": [
     "react",
     "bmates-ui",
@@ -107,10 +105,6 @@
   "files": [
     "/dist"
   ],
-  "publishConfig": {
-    "@kyechan99:registry": "https://npm.pkg.github.com"
-  },
   "readme": "ERROR: No README data found!",
-  "homepage": "https://github.com/kyechan99/bmates-ui#readme",
   "_id": "bmates-ui@0.0.1"
 }
