chore: publish config

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @kyechan99:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=
